--- a/public/styles/tweet-list.css
+++ b/public/styles/tweet-list.css
@@ -1,56 +1,59 @@
-section.list-tweet {
+list-tweet {
 	padding-top: 25px;
 }
 
-article.tweet {
+.tweet {
 	border: 3px solid black;
 	padding: 10px;
 	margin: 10px 0;
 	opacity: 0.7;
 }
 
-article.tweet:hover {
+.tweet:hover {
 	opacity: 1;
 	box-shadow: 5px 5px grey;
 }
 
-article.tweet:hover span.tweet-username {
+.tweet:hover .tweet-username {
 	display: block;
 }
 
-article.tweet span.tweet-username {
+.tweet .tweet-username {
 	display: none;
 	color: grey;
 	font-weight: lighter;
 }
 
-article.tweet p {
+.tweet p {
 	border-bottom: 3px solid black;
-	padding: 30px 0;
+	/* padding: 30px 0; */
 	font-weight: bold;
 	font-size: 18px;
 }
 
-article.tweet div.article-footer {
+.tweet .article-footer {
 	display: flex;
 	justify-content: space-between;
 	font-size: 12px;
 }
 
-article.tweet div.article-header {
+.tweet .article-header {
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
 	font-size: 20px;
 }
 
-article.tweet span > img {
+.tweet span img {
 	height: 2em;
 	width: 2em;
-	height: auto;
 }
 
-article.tweet div.article-footer div.icons {
+.icons {
 	display: flex;
 	justify-content: space-around;
+}
+
+article p {
+	word-wrap: break-word;
 }
